force-app/main/default/objects/vlocity_ps__ServicePlanServicesProducts__c/vlocity_ps__ServicePlanServicesProducts__c.object-meta.xml
<CustomObject>
    <description>The products and service provided to a client to help accomplish the desired outcome</description>
    <label>Service &amp; Product</label>
    <nameField>
        <label>Services &amp; Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services &amp; Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>