force-app/main/default/objects/vlocity_ps__ServicePlanServicesProducts__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome</label>
    <referenceTo>vlocity_ps__ServicePlanOutcome__c</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>Services_Products</relationshipName>
    <type>Lookup</type>
</CustomField>