force-app/main/default/objects/vlocity_ps__ServicePlanServicesProducts__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>Services_Products</relationshipName>
    <type>Lookup</type>
</CustomField>