force-app/main/default/objects/vlocity_ps__ServicePlanServicesProducts__c/fields/vlocity_ps__Product__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>ServicesProducts</relationshipName>
    <type>Lookup</type>
</CustomField>