force-app/main/default/objects/vlocity_ps__ServicePlanServicesProducts__c/fields/vlocity_ps__ServicePlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServicePlanId__c</fullName>
    <label>Service Plan</label>
    <referenceTo>vlocity_ps__BenefitCaseServicePlan__c</referenceTo>
    <relationshipLabel>Services &amp; Products</relationshipLabel>
    <relationshipName>Services_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>